--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Submit Button with Hover Effect</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+	<button id="btn" type="submit">Submit</button>
+
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
